--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="svgContainer">
             <!--The svg goes here-->
         </div>
+        <h1 id="empty">Le diagramme est vide, posez une carte pour commencer</h1>
         <button onclick="changeDirection()" id="rotate"><img src="images/orientation.png" width="70px" height="70px"/></button>
         <button onclick="rename()" id="rename">Renommer</button>
 
