--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <body>
         <title>cardFSM</title>
         <script src="/socket.io/socket.io.js"></script>
-        <script src="script/clientScript.js"></script>
+        <script src="client/clientScript.js"></script>
 
 
         <!--<object data="basicSm.svg" type="image/svg+xml" id="svgDiagram"></object>-->
