--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
             div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
             div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
             .ui-dialog .ui-state-error { padding: .3em; }
+            .ui-dialog-buttonset {float: none; display: flex; justify-content: space-between;}
             #dialog{display : none;}
         </style>
     </head>
