--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-        <link rel="stylesheet" type="text/css" href="css/svgTest.css">
+        <link rel="stylesheet" type="text/css" href="css/cardFSM.css">
         <link rel="stylesheet" href="/jqueryLibs/jquery-ui-themes-1.13.1/themes/base/jquery-ui.min.css">
         <link rel="stylesheet" href="/jqueryLibs/jsToast/jquery.toast.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -57,6 +57,7 @@
                 <span id="spanCard3"></span>
             </div>
         </div>
+        <button onclick="unlink()" id="detach"><img src="images/detach.png" width="70px" height="70px"/></button>
         <button onclick="changeDirection()" id="rotate"><img src="images/orientation.png" width="70px" height="70px"/></button>
         <button onclick="editDialog()" id="rename"><img src="images/edit.png" width="70px" height="70px"/></button>
 
