--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
                 <span id="spanCard3"></span>
             </div>
         </div>
+        <button onclick="closeInfo()" id="close"><img src="images/cross.png" width="70px" height="70px"/></button>
         <button onclick="unlink()" id="detach"><img src="images/detach.png" width="70px" height="70px"/></button>
         <button onclick="changeDirection()" id="rotate"><img src="images/orientation.png" width="70px" height="70px"/></button>
         <button onclick="editDialog()" id="rename"><img src="images/edit.png" width="70px" height="70px"/></button>
